// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buffer.concat cannot be "referenced" 1`] = `
"snippetCode.ts (2,27): Builtin properties cannot be referenced

      1 | 
    > 2 |       const keys = Buffer['concat'];
        |                           ^
      3 |     
"
`;

exports[`Buffer.concat cannot be referenced 1`] = `
"snippetCode.ts (2,27): Builtin properties cannot be referenced

      1 | 
    > 2 |       const keys = Buffer.concat;
        |                           ^
      3 |     
"
`;

exports[`Buffer.concat cannot be set 1`] = `
"snippetCode.ts (2,14): Cannot assign to 'concat' because it is a read-only property.

      1 | 
    > 2 |       Buffer.concat = (list: Buffer[]) => Buffer.from('', 'hex');
        |              ^
      3 |     
"
`;
